# gs-dotfiles

./: '  LICENSE.md  README.md  ascii-text-art.txt  ascii.js  ascii.sh  boot.sh  grad_demo.sh  install.sh  medium.md  mise.toml  pyproject.toml  simplelogo.sh  test_gum.sh
install.d/: 01-zsh.sh  ascii.js  ascii.sh  directories.sh  dotfiles.sh  get_os.sh  get_user_input.sh  git.sh  inst_user_input.sh  install-lazyvim.sh  install_dbs.sh  install_mise_languages.sh  install_pkgmgr_gum.sh  installation_choices.sh  logo.md  remove-packages.sh  returnpass.sh  select-mise-languages.sh  select_ai.sh  select_creative.sh  select_dbs.sh  select_desktop_optionals.sh  select_dev_languages.sh  select_devops.sh  set_gum_colors.sh  set_gum_flags.sh  test.sh  themes.sh  wallpaper.sh  zsh.sh
install.d/dotfiles/: .zshrc  dotfiles.sh
install.d/dotfiles/.config/nvim/: lazyvim.json
install.d/dotfiles/.config/zellij/: config.kdl
install.d/dotfiles/.shellrc/: 00-PATH.sh  60-sexy-bash-prompt.sh  99-init.sh
install.d/dotfiles/bash/: .bashrc
install.d/dotfiles/golangci/: .golangci.yaml
install.d/dotfiles/shellrc/.shellrc/: 00-PATH.sh  02-aliases.sh  10-sensible.sh  99-init.sh
install.d/dotfiles/zsh/: .zshrc
install.d/macos/: Brewfile-artist-apps  Brewfile-base  Brewfile-basic-apps  Brewfile-desktop-apps  Brewfile-dev  Brewfile-devops  Brewfile-nerdfonts  Brewfile-terminal-apps  launch.sh  yos-dock.sh  yos-main-configs.sh  yos-packages.sh  yos-peripherals.sh  yos-screenshots.sh  yos_optional_desktop_apps.sh  yos_packages_ai.sh  yos_packages_creative.sh  yos_packages_devops.sh
(+21 files in other folders)
