[project]
name = "gs-dotfiles"
version = "0.1.0"
description = ""
authors = [{ name = "Garrett Anderson", email = "g@devnull.rip" }]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = ["textual (>=8.0.0,<9.0.0)"]

[tool.poetry]
packages = [{ include = "gs_dotfiles", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
